--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,10 @@ services:
       # - "4566:4566" # Default all services run on 4566
       - "5000:5000"
     environment:
-      - SERVICES=s3,sqs,lambda,cloudformation,sts,iam,cloudwatch,apigateway,events # Add other services if you are interested
+      - EDGE_PORT=5000 #Default edge port is 4565 for all services, change here and above Port section if you want to customize it
+      - SERVICES=serverless,sqs # serverless = (apigatway,cloudformation,cloudwatch,dynamodb,iam,sts,kinesis,lambda,s3) ; add others like sqs,sns,events on needed basis
       - DEBUG=1
       - DATA_DIR=/tmp/localstack/data
-      - EDGE_PORT=5000 #Default port is 4565 for all services, change here and above Port section if you want to customize it
-      # - PORT_WEB_UI=8080 Localstack UI is deprecated.  Alternative UI should be used instead.
       - LAMBDA_EXECUTOR=docker-reuse
       - LAMBDA_REMOTE_DOCKER=false
       - LAMBDA_REMOVE_CONTAINERS=true
